- FIX: removed sonar violations
git-svn-id: svn+ssh://svn.verinice.org/data/subversion/svnroot/TRUNK@3497 4c0145ca-515c-4d1a-a6bc-f9bd594c3410